Update[frontent]: fix media alignment

--- a/src/components/Header/AnimatedHeader.module.scss
+++ b/src/components/Header/AnimatedHeader.module.scss
@@ -192,7 +192,7 @@ $activeIndex: 0;
   left: 70%;
   color: #9ee46f;
   width: 29%;
-  zindex: 1;
+  zindex: 999;
 }
 
 .eightSvg {
